2006-08-23  Roman Kennke  <kennke@aicas.com>

	* java/awt/Container.java
	(maxSize): Removed field. This is already declared in Component.
	(validateTree): Check for ContainerPeer. Don't addNotify here.
	Only validate Component instances if they are invalid.

2006-08-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(preferredSize): Removed field.
	(maximumSize): Removed field.
	(minimumSize): Removed field.
	(getMaximumSize): Adjusted to delegate to Component, rather
	then managing the size in JComponent.
	(getMinimumSize): Adjusted to delegate to Component, rather
	then managing the size in JComponent.
	(getPreferredSize): Adjusted to delegate to Component, rather
	then managing the size in JComponent.
	(isMaximumSizeSet): Removed.
	(isMinimumSizeSet): Removed.
	(isPreferredSizeSet): Removed.
	(setMaximumSize): Removed.
	(setMinimumSize): Removed
	(setPreferredSize): Removed.

2006-08-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/AbstractButton.java
	(ButtonChangeListener.stateChanged): Delegate to combined
	handler.
	(EventHandler): New inner class. Handles all three types
	of events on the model.
	(eventHandler): New field. Stores the combined event
	handler.
	(AbstractButton): Moved listener initialization to
	setModel().
	(createActionListener): Return combined handler.
	(createChangeListener): Return combined handler.
	(createItemListener): Return combined handler.
	(getEventHandler): New helper method for creating the combined
	handler.
	(setModel): Initialize listeners here.
	* javax/swing/plaf/basic/BasicButtonListener.java
	(ButtonAction): New class. Implements the keyboard action
	for buttons.
	(checkOpacity): Implemented.
	(createDefaultActionMap): New helper method.
	(installKeyboardActions): Rewritten to install InputMap
	and ActionMap according to 'new' keyboard input method.
	(mouseClicked): Commented as no-op.
	(mouseDragged): Commented as no-op.
	(mouseMoved): Commented as no-op.